--- a/component/Cart/Cart.module.css
+++ b/component/Cart/Cart.module.css
@@ -1,8 +1,31 @@
 .cart-items {
     list-style: none;
+
     margin: 0;
     padding: 0;
+
+    max-height: 20rem;
+    overflow-y: scroll;
   }
+  ::-webkit-scrollbar {
+    width: 5px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: rgb(144, 45, 2); 
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: rgb(106, 24, 1); 
+  }
+
   
   .total {
     display: flex;
@@ -24,10 +47,9 @@
 
     background-color: transparent;
     border: 1px solid #8a2b06;
-    border-radius: 25px;
-
-
+    
     padding: 0.5rem 2rem;
+    border-radius: 25px;
     margin-left: 1rem;
   }
   
@@ -35,7 +57,6 @@
   .actions button:active {
     background-color: #5a1a01;
     border-color: #5a1a01;
-    
     color: white;
   }
   
